tests/type_errors/input.pylambda
input x;
print x or true;